--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -6,7 +6,40 @@
     "Bog'lanish": "Contact",
     "Eng yaxshi sayohat yo'nalishlari arzon narxlarda.": "The best tourist routes at affordable prices.",
   "Barcha mamlakatlarga ishonchli viza ishlov berish.": "Reliable visa processing for all countries.",
-  "Sayohatdagi qulayligingiz bizning tashvishimiz.": "Your comfort in travel is our concern."
+  "Sayohatdagi qulayligingiz bizning tashvishimiz.": "Your comfort in travel is our concern.",
+  "Populars": "Populars",
+  "EASY VISA CONSULTING — bu sayohatchilar uchun viza yordami ko'rsatishga ixtisoslashgan tez rivojlanayotgan kompaniya. Biz sizning sayohatlaringizni qulay va xavfsiz qilishni ta'minlaymiz." : "EASY VISA CONSULTING is a rapidly growing company specializing in visa support for travelers. We ensure that your trips are comfortable and worry-free.",
+  "EASY VISA CONSULTING sayohat va biznes safarlari uchun Schengen hududi, Kanada, AQSH, Buyuk Britaniya, Yaponiya va Koreyaga viza xizmatlarini taqdim etadi. Bizning tajribali mutaxassislar jamoamiz yuqori darajadagi xizmatni ta'minlab, sizning sayohat rejalaringizga e'tibor qaratishga imkon beradi." : "EASY VISA CONSULTING provides visa services for leisure and business trips to the Schengen Area, Canada, the USA, the UK, Japan, and Korea. Our team of experienced professionals ensures a high level of service, allowing you to focus on your travel plans.",
+  "Biz viza ariza jarayonini O'zbekistondan kelgan mijozlarimiz uchun oddiy va tushunarli qilishga sodiqmiz, ularga dunyoning eng yaxshi sayohat manzillariga oson va tez kirish imkonini yaratamiz." : "We are committed to making the visa application process simple and understandable for clients from Uzbekistan, enabling them to easily and quickly access the best travel destinations in the world.",
+  "Ekskursiya": "Excursion",
+  "Mijozlar Sharhlari" :  "Client Reviews",
+  "Sayohat va Vizalar bo'yicha Prioritetlar": "Priorities in Tourism and Visas",
+  "Biz sayohat vizalarini olishda yuqori darajadagi xizmat va ishonchlilikni ta'minlaymiz. Bizning jamoamiz turizm sohasida tajribaga ega bo'lib, vizalar olish bilan bog'liq masalalarni tezda hal qilishga tayyor. Biz mijozlarimizning sayohatlarini qulay va xavfsiz qilishga intilamiz, har bir bosqichda yordam ko'rsatamiz—vizani tanlashdan to hujjatlarni olishgacha.": "We provide a high level of service and reliability in obtaining tourist visas. Our team has experience in the tourism industry and is ready to quickly resolve issues related to obtaining visas. We strive to make our clients' travels comfortable and carefree, providing support at every stage—from choosing a visa to obtaining documentation.",
+  "Vaqtingizni Saqlash": "Saving Your Time",
+  "Ishonchlilik": "Reliability",
+  "Yordam": "Support",
+  "Qulaylik": "Convenience",
+  "Biz raqamlarda": "We in Numbers",
+  "Berilgan vizalar": "Issued Visas",
+  "Muvaffaqiyatli sayohatlar": "Successful Trips",
+  "Qoniqgan mijozlar": "Satisfied Clients",
+  "Viza maslahatlari": "Visa Consultations",
+  "Turistik vizalar": "Tourist Visas",
+  "Biznes vizalar": "Business Visas",
+  "Hujjatlarni tayyorlash": "Document Preparation",
+  "Sayohat paketlari": "Tour Packages",
+  "Sug'urta": "Insurance",
+  "Biz Evropaga, Shimoliy Amerikaga va Osiyoga qulay sayohat qilish uchun turistik vizalarni olishda yordam beramiz. Bizning mutaxassislarimiz har bir bosqichda to'liq yordam ko'rsatadilar.": "We assist in obtaining tourist visas for comfortable travel to popular countries, including Europe, North America, and Asia. Our experts provide full support at every stage.",
+  "Sayohatlar": "Travels",
+  "Aloqa": "Contact",
+  "Aloqa uchun:": "For contact:",
+  "Ijtimoiy tarmoqlar": "Social media",
+  "easy.visa.uzb": "easy.visa.uzb",
+  "Toshkent, Mustaqillik 59.": "Tashkent, Mustaqillik 59.",
+  "So'rov yuborish": "Submit a request",
+  "© EASY VISA CONSULTING - BARCHA HUQUQLAR HIMOYADA": "© EASY VISA CONSULTING - ВСЕ ПРАВА ЗАЩИЩЕНЫ",
+  "Limsa tomonidan ishlab chiqilgan": "Developed by Limsa"
+
 
   }
   
