--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -6,7 +6,41 @@
     "Bog'lanish": "Контакты",
     "Eng yaxshi sayohat yo'nalishlari arzon narxlarda.": "Лучшие туристические маршруты по доступным ценам.",
     "Barcha mamlakatlarga ishonchli viza ishlov berish.": "Надежная виза для всех стран.",
-    "Sayohatdagi qulayligingiz bizning tashvishimiz.": "Ваш комфорт в путешествии - наша забота."
+    "Sayohatdagi qulayligingiz bizning tashvishimiz.": "Ваш комфорт в путешествии - наша забота.",
+    "Populars": "Популярное",
+      "EASY VISA CONSULTING — bu sayohatchilar uchun viza yordami ko'rsatishga ixtisoslashgan tez rivojlanayotgan kompaniya. Biz sizning sayohatlaringizni qulay va xavfsiz qilishni ta'minlaymiz.": "EASY VISA CONSULTING — быстро развивающаяся компания, специализирующаяся на визовой поддержке для путешественников. Мы гарантируем, что ваши поездки будут комфортными и безопасными.",
+      "EASY VISA CONSULTING sayohat va biznes safarlari uchun Schengen hududi, Kanada, AQSH, Buyuk Britaniya, Yaponiya va Koreyaga viza xizmatlarini taqdim etadi. Bizning tajribali mutaxassislar jamoamiz yuqori darajadagi xizmatni ta'minlab, sizning sayohat rejalaringizga e'tibor qaratishga imkon beradi.": "EASY VISA CONSULTING предоставляет визовые услуги для туристических и деловых поездок в Шенгенскую зону, Канаду, США, Великобританию, Японию и Корею. Наша команда опытных специалистов обеспечивает высокий уровень сервиса, позволяя вам сосредоточиться на планировании своих путешествий.",
+      "Biz viza ariza jarayonini O'zbekistondan kelgan mijozlarimiz uchun oddiy va tushunarli qilishga sodiqmiz, ularga dunyoning eng yaxshi sayohat manzillariga oson va tez kirish imkonini yaratamiz.": "Мы стремимся сделать процесс подачи заявлений на визу простым и понятным для наших клиентов из Узбекистана, предоставляя им легкий и быстрый доступ к лучшим туристическим направлениям мира.",
+      "Ekskursiya" : "Экскурсия",
+      "Mijozlar Sharhlari" :  "Отзывы клиентов",
+      "Sayohat va Vizalar bo'yicha Prioritetlar": "Приоритеты в туризме и визах",
+      "Biz sayohat vizalarini olishda yuqori darajadagi xizmat va ishonchlilikni ta'minlaymiz. Bizning jamoamiz turizm sohasida tajribaga ega bo'lib, vizalar olish bilan bog'liq masalalarni tezda hal qilishga tayyor. Biz mijozlarimizning sayohatlarini qulay va xavfsiz qilishga intilamiz, har bir bosqichda yordam ko'rsatamiz—vizani tanlashdan to hujjatlarni olishgacha.": "Мы предоставляем высокий уровень обслуживания и надежности при получении туристических виз. Наша команда имеет опыт в туристической отрасли и готова быстро решать вопросы, связанные с получением виз. Мы стремимся сделать путешествия наших клиентов комфортными и беззаботными, предоставляя поддержку на каждом этапе — от выбора визы до получения документации.",
+      "Vaqtingizni Saqlash": "Экономия вашего времени",
+      "Ishonchlilik": "Надежность",
+      "Yordam": "Поддержка",
+      "Qulaylik": "Удобство",
+      "Biz raqamlarda": "Мы в цифрах",
+  "Berilgan vizalar": "Выданные визы",
+  "Muvaffaqiyatli sayohatlar": "Успешные поездки",
+  "Qoniqgan mijozlar": "Удовлетворенные клиенты",
+  "Viza maslahatlari": "Консультации по визам",
+  "Turistik vizalar": "Туристические визы",
+  "Biznes vizalar": "Бизнес визы",
+  "Hujjatlarni tayyorlash": "Подготовка документов",
+  "Sayohat paketlari": "Туристические пакеты",
+  "Sug'urta": "Страхование",
+  "Biz Evropaga, Shimoliy Amerikaga va Osiyoga qulay sayohat qilish uchun turistik vizalarni olishda yordam beramiz. Bizning mutaxassislarimiz har bir bosqichda to'liq yordam ko'rsatadilar.": "Мы помогаем в получении туристических виз для комфортных путешествий в популярные страны, включая Европу, Северную Америку и Азию. Наши эксперты предоставляют полную поддержку на каждом этапе.",
+  "Sayohatlar": "Путешествия",
+  "Aloqa": "Контакты",
+  "Aloqa uchun:": "Для связи:",
+  "Ijtimoiy tarmoqlar": "Социальные сети",
+  "easy.visa.uzb": "easy.visa.uzb",
+  "Toshkent, Mustaqillik 59.": "Ташкент, Мустакиллик 59.",
+  "So'rov yuborish": "Отправить запрос",
+  "© EASY VISA CONSULTING - BARCHA HUQUQLAR HIMOYADA": "© EASY VISA CONSULTING - ВСЕ ПРАВА ЗАЩИЩЕНЫ",
+  "Limsa tomonidan ishlab chiqilgan": "Разработано сайтом Limsa"
+    
+    
     
   }
   
